--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#tag {
+  height: 22px;
+  width: 36px;
+  left: 0px;
+  top: 0px;
+  font-family: sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 12.8px;
+line-height: 170%;
+letter-spacing: 0.1em;
+text-transform: uppercase;
+color: #747474;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#helperText{
+  height: 19px;
+  left: 0px;
+  top: 32px;
+  font-family: sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #606060;
+}
+
+input{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  position: static;
+  width: 489px;
+  height: 100px;
+  left: 0px;
+  top: 66px;
+  border: none;
+  background: #F5F5F5;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 15px 0px;
+}
+
+input::placeholder{
+  position: static;
+  width: 449px;
+  height: 80px;
+  left: 20px;
+  top: 0;
+  font-family:sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 170%;
+  color: #AFAFAF;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 10px;
+}
+
+input::-webkit-calendar-picker-indicator  {
+  display: none;
+}
+
+input::-webkit-calendar-picker-indicator:focus  {
+  display: none;
+}
+
+input:focus{
+  border-bottom:2px solid rgb(48, 169, 240);
+  outline: none;
+}
+
+.options{
+  height: 181px;
+  width: 40vw;
+  left: 0px;
+  top: 166px;
+  border-radius: 0px;
+  left: 0%;
+  right: 0%;
+  top: 47.84%;
+  bottom: 0%;
+  border: 1px solid #EBEBEB;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+ul{
+  list-style: none;
+}
+
+.selectedTag{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 10px;
+  width: auto;
+  height: 40px;
+  left: 0px;
+  top: 0px;
+  background: #FFFFFF;
+  border-radius: 2px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 10px;
+}
+
+.selectedOption{
+width: auto;
+margin-right: 10px;
+height: 24px;
+left: 10px;
+top: 8px;
+font-family:sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 170%;
+color: #383838;
+}
+
+img{
+  border:1px solid rgb(48, 169, 240);
 }
